# AI-Model-Studio

./: .gitignore  README.md  TECHNICAL_AUDIT.md  package.json
backend/: .env.example  alembic.ini  backend.spec  requirements.txt  run_backend.py  studio.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  characters.py  media.py  planner.py  prompts.py  references.py  tasks.py
backend/app/db/: session.py
backend/app/models/: __init__.py  character.py  consistency_profile.py  content_plan_item.py  generation_task.py  media_asset.py  prompt_template.py  reference_asset.py
backend/app/schemas/: __init__.py  character.py  consistency_profile.py  content_plan_item.py  generation_task.py  media_asset.py  prompt_template.py  reference_asset.py
backend/app/services/: file_service.py
backend/app/utils/: file_utils.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/characters/: page.tsx
frontend/app/media/: page.tsx
frontend/app/planner/: page.tsx
frontend/app/prompts/: page.tsx
frontend/app/references/: page.tsx
frontend/components/: AppSidebar.tsx  CharacterForm.tsx  MediaCard.tsx  MediaGrid.tsx  PromptEditor.tsx  ReferenceUploadZone.tsx  StatusBadge.tsx  TaskForm.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
scripts/: build-backend.js  generate-icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+12 files in other folders)
